My first commit

--- a/index.css
+++ b/index.css
@@ -211,7 +211,7 @@ ul.menu li a:hover {
 
 
 .hero-image {
-    background: #cccccc url("/dist/Athena_robot/img/image1.jpg") no-repeat;
+    background: #cccccc url(https://www.slamtec.com/images/athena/athena_02.jpg) no-repeat;
     height: 700px;
     width: 100%;
     background-position: center;
