--- a/index.css
+++ b/index.css
@@ -48,7 +48,7 @@ nav {
     text-transform: uppercase;
 }
 .logo span {
-    font-size: 18px;
+    font-size: 16px;
 }
 
 /******* MENU *******/
@@ -119,7 +119,7 @@ ul.menu li a:hover {
     color: #333;
 }
 .content-services-item h2 {
-    font-size: 32px;
+    font-size: 16px;
     text-transform: uppercase;
     color: #333;
     margin: 20px 0;
@@ -211,7 +211,7 @@ ul.menu li a:hover {
 
 
 .hero-image {
-    background: #cccccc url(https://www.slamtec.com/images/athena/athena_02.jpg) no-repeat;
+    background: #cccccc url("img/image1.jpg") no-repeat;
     height: 700px;
     width: 100%;
     background-position: center;
@@ -220,14 +220,56 @@ ul.menu li a:hover {
 
 
 
-@media only screen and (min-width: 150px) and (max-width: 960px){
-    .container {
-        width: 100%;
+@media only screen and (max-width: 480px){
+    header {
+        height: auto;
     }
-    .hero-image {
-        width: 100%;
+
+    .nav-grid {
+        text-align: center;
+        grid-template-columns: 1fr;
     }
-    .logo {
-        width: 100%;
+
+    ul.menu {
+        grid-template-columns: 1fr;
+    }
+
+    ul.menu li {
+        height: 2.5rem;
+    }
+
+    .content {
+        height: 560px;
+    }
+
+    .content-heading img{
+        text-align: center;
+        font-size: 1rem;
+        margin-bottom: 15px;
+    }
+
+    .content-heading h1{
+        text-align: center;
+        font-size: 24px;
+    }
+
+    .content-heading h2{
+        text-align: center;
+        font-size: 20px;
+    }
+
+    
+    .content-heading button {
+        margin-left: 100px;
+        text-align: center;
+    }
+
+    .content-services-grid {
+        grid-template-columns: 1fr;
+        justify-items: center;
+    }
+
+    .content-services-item {
+        width: 70%;
     }
 }
