My first commit

--- a/data.css
+++ b/data.css
@@ -64,3 +64,22 @@ ul.menu li a:hover {
     padding: 5px 10px;
     border-radius: 5px;
 }
+
+@media only screen and (max-width: 480px){
+    header {
+        height: auto;
+    }
+
+    .nav-grid {
+        text-align: center;
+        grid-template-columns: 1fr;
+    }
+
+    ul.menu {
+        grid-template-columns: 1fr;
+    }
+
+    ul.menu li {
+        height: 2.5rem;
+    }
+}
