--- a/index.css
+++ b/index.css
@@ -246,6 +246,7 @@ ul.menu li a:hover {
         text-align: center;
         font-size: 1rem;
         margin-bottom: 15px;
+        margin-right: 10px; 
     }
 
     .content-heading h1{
