--- a/login.css
+++ b/login.css
@@ -1,3 +1,14 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.container {
+    width: 100%;
+    margin: 0 auto;
+}
+
 body{
 	margin: 0 auto;
 	background-image: url(https://www.slamtec.com/images/athena/athena_02.jpg);
